fixed footer spacing for mobile

--- a/style.css
+++ b/style.css
@@ -151,12 +151,6 @@ Generated by Font Squirrel (https://www.fontsquirrel.com) on January 12, 2017
 * {
     box-sizing: border-box;
 }
-.clearfix:before,
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 body {
     font-size: 14px;
     color: #969696;
@@ -166,9 +160,6 @@ body {
 .container {
     padding: 0% 2%;
     width: 480px;
-}
-ul {
-    list-style-type: none;
 }
 h2 {
     font-family: 'playfair italic', 'Times New Roman', Times, serif;    
@@ -185,7 +176,7 @@ h2 {
 .shadow {
     text-shadow: 1px 1px 2px #2d2d2d; 
 }
-.content {
+.copy {
     font-size: 1rem;
     line-height: 2.2rem;
     text-align: center;
@@ -193,12 +184,24 @@ h2 {
 a:hover {
     color: #b64036;
 }
+ul {
+    list-style-type: none;
+}
+.hide {
+    display: none;  
+}
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 
 /* * * * *  N A V I G A T I O N  * * * * */
 
 .nav {
-    padding: 0.8rem 0.5rem 0.6rem 0.5rem;
+    padding: 2%;
 }
 
 .logo {
@@ -225,7 +228,7 @@ a:hover {
     background-size: cover, contain, cover;
     height: 400px;
 }
-.banner-text {
+.centered-text {
     padding: 10rem 0rem;
     color: #fff;
     text-align: center;
@@ -282,19 +285,21 @@ a:hover {
 /* * * * *  N E W S L E T T E R  * * * * */
 
 .sign-up {
-    background: url(images/wave-bkgd.jpg) center bottom no-repeat;
-    background-size: auto cover;
+    background: linear-gradient( to bottom, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.15) 100% ),
+        url(images/wave-bkgd.jpg) center bottom no-repeat;
+    background-size: auto;
     text-align: center;
     color: #fff;
-    height: 400px;
+    height: 335px;
 }
 .sign-up-text {
-    padding: 10rem;
+    padding: 4rem 0rem;
 }
 .email-form {
-    margin: auto 0;
+    margin: 0 auto;
+    margin-top: 2rem;
     position: relative;
-    width: 80%;
+    width: 90%;
 }
 input[type="email"] {
     border: none;
@@ -302,24 +307,33 @@ input[type="email"] {
     font-size: 13px;
     color: #969696;
     font-family: 'raleway light';
-    height: 50px;
-    width: 450px;
+    height: 42px;
+    width: 422px;
     border-radius: 3rem;
     padding: 0.5rem 0.2rem;
-    position: absolute;
 }
-input[type="button"] {
+input[type="email"]:focus,hover,active {
+    outline: none;
+}
+input[type="submit"] {
    border: none;
    background-color: #e2574c;
    color: #fff;
-   padding: 10px 20px;
+   padding: 0.713rem 1.429rem;
    border-radius: 50px;
    font-family: 'raleway medium';
-   font-size: 10pt; 
+   font-size: .9rem; 
    position: absolute;
-   right: 0.1rem;
-   top: 0.2rem;  
+   right: 1.5rem;
+   top: 0.3rem;  
 }
+input[type="submit"]:hover {
+    background-color: #b64036;
+}
+input[type="submit"]:focus {
+    outline: none;
+}
+
 
 
 /* * * * *  F O O T E R  * * * * */
@@ -330,15 +344,21 @@ footer {
     font-family: 'playfair regular', 'Times New Roman', Times, serif;
     text-align: center;
     margin: 8px 0px 0px 0px;
+    padding: 3.5rem 0rem;
+    line-height: 1.3rem;
 }
-.footer-credit {
-    margin: 0.5rem;
+.credits {
+    margin-bottom: 1rem;
 }
-.footer-address {
-    margin: 0.5rem;
+.contact {
+    margin-bottom: 1rem;
+}
+
+.address {
+    margin-bottom: 1.5rem;
     color: #969696;
 }
-.footer-social li {
+.social li {
     text-align: center;
     display: inline-block;
     padding: 0.4rem;
@@ -346,10 +366,7 @@ footer {
 .mailto-link {
     color: #fff;
 }
-.social-links {
-    color: #fff;
-}
-.footer-social a {
+.social a {
     color: #fff;
     text-decoration: none;
 }
@@ -365,6 +382,18 @@ footer {
 /* * * * *  T A B L E T  * * * * */
 
 @media (min-width: 600px) {
+    .container {
+        padding: 0% 2%;
+        width: 600px;
+        margin: 0 auto;
+    }
+    body {
+        font-size: 1.143rem;
+    }
+    h2 {
+        font-size: 2.5rem;
+        margin: 0rem 0rem 1rem 0rem;
+    }
     .banner {
         background-size: cover, contain, contain;
     }
@@ -373,20 +402,12 @@ footer {
     }
     .ss2016 {
         font-size: 2.2rem;
-        /*padding-top: 1.5rem;*/
     }
     .most-loved li {
         float: left;
         width: 50%;
     }
-    body {
-    font-size: 16px;
-    }
-    .container {
-        padding: 0% 2%;
-        width: 600px;
-        margin: 0 auto;
-    }
+
     
     /* * * * * *  footer  * * * * */
 
